--- a/templates/stream.html
+++ b/templates/stream.html
@@ -321,8 +321,8 @@
             <div class="quiet-preview__list" id="summaryGrid">
                 {% for det in visual_summary %}
                 <a class="quiet-preview__item fade-in-item" style="position: relative;"
-                    href="/species/overview?species_key={{ (det.species_key or det.latin_name or 'Unclassified') | urlencode }}"
-                    aria-label="Show all detections: {{ det.common_name }}">
+                    href="/gallery/{{ today_iso }}"
+                    aria-label="Today's detections: {{ det.common_name }}">
 
                     <img class="quiet-preview__thumb" loading="lazy" src="{{ det.display_path }}"
                         alt="{{ det.common_name }}">
